--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,2 +1,7 @@
 @import "tailwindcss";
 
+@theme {
+  --color-forest: #2a3c36;
+  --color-forest-dark: #253731;
+  --color-forest-darker: #1c2b27
+}
