--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
+import Header from "@/sections/Header.astro"
 import "@/styles/global.css"
+
 const {title} = Astro.props
 ---
 
@@ -12,16 +14,7 @@ const {title} = Astro.props
 		<title>{title}</title>
 	</head>
 	<body class="min-h-screen bg-gradient-to-b from-forest to-[#202020] text-white">
-		<header class="container mx-auto px-4 py-6 border-b border-forest">
-			<nav class="flex items-center justify-between">
-				<div class="font-bold text-xl">
-					<a href="/">Cortame</a>
-				</div>
-				<ul>
-					<li>Iniciar Sesión</li>
-				</ul>
-			</nav>
-		</header>
+		<Header />
 		<main class="container mx-auto px-4 py-4">
 			<slot />
 		</main>
