--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,11 @@
 ---
 import Layout from "@/layouts/Layout.astro";
+import {
+  SignedIn,
+  SignedOut,
+  SignInButton,
+} from "@clerk/astro/components";
+
 ---
 
 <Layout title="Cortame - Acortador de URL">
@@ -12,12 +18,24 @@ import Layout from "@/layouts/Layout.astro";
       enlaces con nuestra plataforma potenciada por IA.
     </p>
     <div class="flex flex-col sm:flex-row gap-4 justify-center">
-      <a
-        href="/dashboard"
-        class="bg-emerald-600 hover:bg-emerald-700 transition-all duration-150 cursor-pointer text-white px-8 py-4 text-lg rounded-md hover:scale-105"
-      >
-        Crear Link →
-      </a>
+      <SignedOut>
+        <SignInButton 
+          mode="modal" 
+          forceRedirectUrl="/dashboard"
+          class="bg-emerald-600 hover:bg-emerald-700 transition-all duration-150 cursor-pointer text-white px-8 py-4 text-lg rounded-md hover:scale-105"
+        >
+            Crear Link →
+        </SignInButton>
+      </SignedOut>
+
+      <SignedIn>
+        <a
+          href="/dashboard"
+          class="bg-emerald-600 hover:bg-emerald-700 transition-all duration-150 cursor-pointer text-white px-8 py-4 text-lg rounded-md hover:scale-105"
+        >
+          Crear Link →
+        </a>
+      </SignedIn>
     </div>
   </div>
 
