--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const {title} = Astro.props
 		</main>
 		<footer class="container mx-auto px-4 py-6 mt-auto"> 
 			<div class="border-t boder-[#2a3c36] pt-8 text-center text-sm text-gray-400">
-				<p> {new Date().getFullYear()} Cortame. Hecho con ♥️ por <a href="https://henryck.dev">Henryck</a></p>
+				<p> {new Date().getFullYear()} Córtame. Hecho con ♥️ por <a href="https://henryck.dev">Henryck</a></p>. Hackaton 2025 de Clerk x Midudev
 			</div>
 		</footer>
 	</body>
