--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import {
 
 ---
 
-<Layout title="Cortame - Acortador de URL">
+<Layout title="Córtame - Acortador de URL">
   <div class="max-w-4xl mx-auto text-center flex flex-col items-center justify-center gap-10 pt-20">
     <h1 class="text-4xl md:text-6xl font-bold text-balance">
       Acorta tus tus enlaces con <span class="text-emerald-400">IA</span>
