--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -13,6 +13,8 @@ import { getUserLinks } from "@/db/client";
 const user = await Astro.locals.currentUser();
 if (!user) return Astro.redirect("/");
 
+const URL = Astro.url.origin
+
 const userId = user.emailAddresses[0]?.emailAddress;
 const userLinks = await getUserLinks(userId);
 ---
@@ -77,7 +79,7 @@ const userLinks = await getUserLinks(userId);
                       href={String(original)}
                       class="font-medium hover:underline cursor-pointer"
                     >
-                      cortame.link/{id}
+                      {URL}/{id}
                     </a>
                     <button class=" text-gray-400 hover:text-white hover:-rotate-3 transition cursor-pointer">
                       <Copy width={18} height={18} />
