--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -59,7 +59,7 @@ const userLinks = await getUserLinks(userId);
             >
             <div class="flex items-center">
               <span
-                class="bg-[#1a2622] border border-r-0 border-[#2a3c36] px-3 py-2 rounded-l-md text-gray-400"
+                class="bg-[#1a2622] border border-r-0 border-[#2a3c36] px-3 py-2 rounded-l-md text-gray-400 w-80 text-center"
               >
                 {BASE_URL}/
               </span>
