--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -149,7 +149,10 @@ const randomNumber = Math.floor(Math.random() * 150) + 1
                     >
                       {BASE_URL}/{id}
                     </a>
-                    <button class=" text-gray-400 hover:text-white hover:-rotate-3 transition cursor-pointer">
+                    <button 
+                      class="text-gray-400 hover:text-white hover:-rotate-3 transition cursor-pointer copy-btn"
+                      data-url={`${BASE_URL}/${id}`}
+                    >
                       <Copy width={18} height={18} />
                     </button>
                   </div>
@@ -191,7 +194,9 @@ const randomNumber = Math.floor(Math.random() * 150) + 1
 </Layout>
 
 <script>
-  const urlForm = document.querySelector('#url-form') as HTMLFormElement | null;
+  const urlForm = document.querySelector('#url-form')
+  const copyButtons = document.querySelectorAll('.copy-btn')
+
   urlForm?.addEventListener('submit', async (e) => {
     e.preventDefault()
 
@@ -212,5 +217,15 @@ const randomNumber = Math.floor(Math.random() * 150) + 1
       window.location.reload()
     }
 
+  })
+
+  copyButtons?.forEach((btn) => {
+    btn.addEventListener('click', () => {
+      const url = btn.getAttribute('data-url')
+      console.log(url)
+      if (url) {
+        navigator.clipboard.writeText(url)
+      }
+    })
   })
 </script>
