--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -58,16 +58,16 @@ const randomNumber = Math.floor(Math.random() * 150) + 1
             <label class="text-sm font-medium mb-2 block"
               >Alias personalizado (opcional)</label
             >
-            <div class="flex flex-col lg:flex-row items-center">
+            <div class="flex flex-col lg:flex-row items-center w-full">
               <span
-                class="bg-[#1a2622] border rounded-t-md lg:border-r-0 lg:rounded-md lg:rounded-r-none border-[#2a3c36] px-3 py-2 text-gray-400 lg:w-80 text-center w-full"
+                class="bg-[#1a2622] border rounded-t-md lg:border-r-0 lg:rounded-md lg:rounded-r-none border-[#2a3c36] px-3 py-2 text-gray-400 w-full lg:w-fit"
               >
-                {BASE_URL}/
+                https://cortame-app.vercel.app/
               </span>
               <input
                 name="slug"
                 placeholder="mi-link"
-                class="border border-t-0 rounded-b-md lg:border lg:rounded-md lg:rounded-l-none bg-[#1a2622] border-[#2a3c36] text-white focus-visible:ring-emerald-500 px-3 py-2 w-full"
+                class="border border-t-0 rounded-b-md lg:border lg:rounded-md lg:rounded-l-none bg-[#1a2622] border-[#2a3c36] text-white focus-visible:ring-emerald-500 px-3 py-2 w-full lg:flex-1"
               />
             </div>
           </div>
