fix: enhance input focus styles for URL and slug fields

--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -47,11 +47,11 @@ const randomNumber = Math.floor(Math.random() * 150) + 1
       <div>
         <form id="url-form" class="space-y-4">
           <div>
-            <label class="text-sm font-medium mb-2 block ">URL Original</label>
+            <label class="text-sm font-medium mb-2 block">URL Original</label>
             <input
               placeholder="https://tu-url-larga.com"
               name="original-url"
-              class="bg-[#1a2622] border-[#2a3c36] text-white focus-visible:ring-emerald-500 w-full px-3 py-2"
+              class="bg-[#1a2622] border-[#2a3c36] text-white focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-emerald-500 focus-visible:rounded-md w-full px-3 py-2"
             />
           </div>
           <div>
@@ -67,7 +67,7 @@ const randomNumber = Math.floor(Math.random() * 150) + 1
               <input
                 name="slug"
                 placeholder="mi-link"
-                class="border border-t-0 rounded-b-md lg:border lg:rounded-md lg:rounded-l-none bg-[#1a2622] border-[#2a3c36] text-white focus-visible:ring-emerald-500 px-3 py-2 w-full lg:flex-1"
+                class="border border-t-0 rounded-b-md lg:border lg:rounded-md lg:rounded-l-none bg-[#1a2622] border-[#2a3c36] text-white focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-emerald-500 focus-visible:rounded-md px-3 py-2 w-full lg:flex-1"
               />
             </div>
           </div>
